# Homework

./: setup.cfg
AlesiaTsepliakova/: Task 1.py  Task 2.py  Task 3.py  Task 4.5.py  Task 4.py  Task 5.py  Task 6.py  Task_4.1.py  Task_4.10.py  Task_4.11.py  Task_4.2.py  Task_4.3.py  Task_4.4.py  Task_4.5.py  Task_4.6.py  Task_4.7.py  Task_4.8.py  Task_4.9.py  Task_5.1.py  Task_5.2.py  Task_5.3.py  Task_5.4.py  Task_5.5.py  Task_5.6.py  Task_5.7.py  Task_6.1.py  Task_6.2.py  Task_6.3.py  Task_6.4.py  Task_6.6.py  Task_6.7.py  Task_6.8.py  Task_7.1.py  Task_7.10.py  Task_7.11.py  Task_7.2.py  Task_7.3.py  Task_7.4.py  Task_7.5.py  Task_7.6.py  (+4 more)
AlesiaTsepliakova/final_task/: README.md  interface.py  json_news.json  rss_reader.py
rss_reader/: .coverage  README.md  articles.csv  articles.html  filters.py  interface.py  parsers.py  rss_item.py  rss_reader.py  rss_storage.py  test_interface.py  test_parsers.py  test_utils.py  test_writers.py  utils.py  writers.py
