
[metadata]
name = rss_reader
version = 0.0.3
author = Alesia Tsepliakova
author_email = a.teplyakova@tut.by
description = Reader of RSS feed
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IT-Gae4ka/rss-reader
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >=3.8.6
install_requires =
    requests >= 2.25.1
    reportlab >= 3.6.2
    
[options.entry_points]
console_scripts =
    rss_reader = rss_reader.rss_reader:main